--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zanobijs-commons",
+  "name": "zanobijs-common",
   "version": "0.0.0",
-  "description": "Zanobi - modern, small, powerful node.js lambda framework (@commons)",
+  "description": "Zanobi - modern, small, powerful node.js lambda framework (@common)",
   "keywords": [],
   "author": "John Edison Cortes Rivera [Devdroide] <johne.aplicativos@gmail.com>",
   "license": "ZanobiJS Usage License \n\n Review the LICENSE file.\n\n Revise e archivo de LICENCIA.",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/devdroide/ZanobiJS/issues"
   },
-  "homepage": "https://github.com/devdroide/ZanobiJS#readme"
+  "homepage": "https://github.com/devdroide/ZanobiJS#readme",
+  "dependencies": {
+    "joi": "^17.11.0",
+    "reflect-metadata": "^0.1.13"
+  }
 }
