--- a/packages/common/tsconfig.build.json
+++ b/packages/common/tsconfig.build.json
@@ -7,5 +7,5 @@
     "rootDir": "./src"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "test/**/*", "*.spec.ts"],
+  "exclude": ["node_modules", "dist", "__test__/**/*", "*.spec.ts"],
 }
