--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "composite": false,
+    "composite": true,
     "module": "commonjs",
     "declaration": true,
     "noImplicitAny": false,
@@ -18,6 +18,6 @@
     "allowJs": false,
     "strict": true,
     "strictNullChecks": false,
-    "types": ["node"]
+    "types": ["node", "mocha"]
   }
 }
