--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,8 +4,9 @@
   "description": "Zanobi - modern, small, powerful node.js lambda framework (@core)",
   "keywords": [],
   "author": "John Edison Cortes Rivera [Devdroide] <johne.aplicativos@gmail.com>",
-  "license": "ZanobiJS Usage License \n\n Review the LICENSE file.\n\n Revise e archivo de LICENCIA.",
+  "license": "ZanobiJS Usage License \n\n Review the LICENSE file.\n\n Revise el archivo de LICENCIA.",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "directories": {
     "dist": "dist",
     "test": "__tests__"
@@ -24,5 +25,12 @@
   "bugs": {
     "url": "https://github.com/devdroide/ZanobiJS/issues"
   },
-  "homepage": "https://github.com/devdroide/ZanobiJS#readme"
+  "homepage": "https://github.com/devdroide/ZanobiJS#readme",
+  "dependencies": {
+    "awilix": "^9.0.0",
+    "reflect-metadata": "^0.1.13"
+  },
+  "peerDependencies": {
+    "zanobijs-common": "*"
+  }
 }
