--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,11 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "command": {
+    "version": {
+      "allowBranch": ["main", "beta"],
+      "conventionalCommits": true,
+      "message": "chore(release): publish %s"
+    }
+  }
 }
