--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   ],
   "scripts": {
     "build": "tsc -b -v packages",
-    "build:dev": "tsc -b -v packages --watch",
     "build:prod": "tsc -b -v packages",
     "clean": "tsc -b --clean packages",
     "test": "nyc --reporter=lcov mocha -r ts-node/register packages/**/*.spec.ts --timeout 5000 --exit",
-    "prerelease:alpha": "lerna version prerelease --preid alpha",
-    "prerelease:beta": "lerna version prerelease --preid beta",
-    "publish:alpha": "npm run build:prod  && npm run prerelease && lerna publish from-package --dist-tag alpha",
-    "publish:beta": "npm run build:prod && npm run prerelease && lerna publish from-package --dist-tag beta",
-    "publish": "npm run build:prod && lerna publish"
+    "version:newBeta": "lerna version premajor --preid beta --conventional-commits --conventional-prerelease --create-release github",
+    "version:conventional": "lerna version --conventional-commits --create-release github",
+    "version:stable": "lerna version --conventional-commits --conventional-graduate --create-release github",
+    "publish:newBeta": "npm run build:prod && npm run version:newBeta && lerna publish from-package --dist-tag beta",
+    "publish:conventionalBeta": "npm run build:prod && npm run version:conventional && lerna publish from-package --dist-tag beta",
+    "publish:conventional": "npm run build:prod && npm run version:conventional && lerna publish from-package",
+    "publish": "npm run build:prod && npm run version:stable && lerna publish from-package"
   },
   "devDependencies": {
     "@types/chai": "^4.3.9",
