--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,5 +25,6 @@
   "dependencies": {
     "joi": "^17.11.0",
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "8c072ffa7048be60272ef6c629495603cd42df4a"
 }
