--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zanobijs-core",
+  "name": "@zanobijs/core",
   "version": "1.0.0-beta.0",
   "description": "Zanobi - modern, small, powerful node.js lambda framework (@core)",
   "keywords": [],
