--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,15 +5,8 @@
   "keywords": [],
   "author": "John Edison Cortes Rivera [Devdroide] <johne.aplicativos@gmail.com>",
   "license": "ZanobiJS Usage License \n\n Review the LICENSE file.\n\n Revise el archivo de LICENCIA.",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "directories": {
-    "dist": "dist",
-    "test": "__tests__"
-  },
-  "files": [
-    "dist"
-  ],
+  "main": "index.js",
+  "typings": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devdroide/ZanobiJS.git"
