--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
     "version": {
       "allowBranch": ["main", "beta"],
       "conventionalCommits": true,
-      "message": "chore(release): publish %s"
+      "message": ":bookmark: chore(release@zanobijs): publish %s"
     },
     "publish": {
       "access": "public"
