:sparkles: ZNB007 adjusted readme in packages

--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -8,7 +8,7 @@
       "@zanobijs/common/*": ["../common/*"]
     }
   },
-  "exclude": ["node_modules", "dist", "test/**/*", "*.spec.ts"],
+  "exclude": ["node_modules", "dist", "__test__/**/*", "*.spec.ts"],
   "references": [
     {
       "path": "../common/tsconfig.build.json"
