:sparkles: ZNB007 Stabilize provider list and debug improvements

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b -v packages",
     "build:prod": "tsc -b -v packages",
     "clean": "npx gulp clean:ts",
-    "test": "nyc --reporter=lcov mocha -r ts-node/register packages/**/*.spec.ts --timeout 5000 --exit",
+    "Alltest": "nyc --reporter=lcov mocha -r ts-node/register packages/**/*.spec.ts --timeout 1000 --exit",
+    "test": "nyc --reporter=lcov mocha -r ts-node/register packages/core/__test__/factory.spec.ts --timeout 1000 --exit",
     "version:newBeta": "lerna version premajor --preid beta --conventional-commits --conventional-prerelease --create-release github",
     "version:conventional": "lerna version --conventional-commits --create-release github",
     "version:stable": "lerna version --conventional-commits --conventional-graduate --create-release github",
