:sparkles: ZNB007 improvements in dependency injection and unit testing

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "tsc -b -v packages",
     "build:prod": "tsc -b -v packages",
     "clean": "npx gulp clean:ts",
-    "Alltest": "nyc --reporter=lcov mocha -r ts-node/register packages/**/*.spec.ts --timeout 1000 --exit",
-    "test": "nyc --reporter=lcov mocha -r ts-node/register packages/core/__test__/factory.spec.ts --timeout 1000 --exit",
+    "test": "nyc --reporter=lcov mocha -r ts-node/register packages/**/*.spec.ts --timeout 1000 --exit",
+    "testInject": "nyc --reporter=lcov mocha -r ts-node/register packages/core/__test__/injector/**.spec.ts --timeout 1000 --exit",
+    "testFactory": "nyc --reporter=lcov mocha -r ts-node/register packages/core/__test__/**.spec.ts --timeout 1000 --exit",
+    "testCore": "nyc --reporter=lcov mocha -r ts-node/register packages/core/**/*.spec.ts --timeout 1000 --exit",
     "version:newBeta": "lerna version premajor --preid beta --conventional-commits --conventional-prerelease --create-release github",
     "version:conventional": "lerna version --conventional-commits --create-release github",
     "version:stable": "lerna version --conventional-commits --conventional-graduate --create-release github",
