--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "command": {
     "version": {
       "allowBranch": ["main", "beta"],
