--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "packages/*"
   ],
   "scripts": {
+    "lint:fix": "npx eslint \"packages/**/*.ts\" --quiet --fix",
+    "prettier:fix": "prettier --write \"packages/**/*.ts\"",
     "build": "tsc -b -v packages",
     "build:prod": "tsc -b -v packages",
     "clean": "npx gulp clean:ts",
@@ -24,26 +26,24 @@
     "postpublish": "npm run clean"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/chai": "^4.3.9",
     "@types/mocha": "^10.0.3",
     "@types/node": "^20.8.7",
     "@types/sinon": "^10.0.20",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
     "chai": "^4.3.10",
     "del": "^7.1.0",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint": "^9.20.0",
     "gulp": "^4.0.2",
     "lerna": "^7.4.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.5.3",
     "sinon": "^17.0.1",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^8.28.0"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13"
