--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint:fix": "npx eslint \"packages/**/*.ts\" --quiet --fix",
     "prettier:fix": "prettier --write \"packages/**/*.ts\"",
     "build": "tsc -b -v packages",
-    "build:prod": "tsc -b -v packages",
     "clean": "npx gulp clean:ts",
     "test": "nyc mocha -r ts-node/register packages/**/*.spec.ts --timeout 1000 --exit",
     "testInject": "nyc mocha -r ts-node/register packages/core/__test__/injector/**.spec.ts --timeout 1000 --exit",
@@ -18,11 +17,11 @@
     "version:newBeta": "lerna version premajor --preid beta --conventional-commits --conventional-prerelease --create-release github",
     "version:conventional": "lerna version --conventional-commits --create-release github",
     "version:stable": "lerna version --conventional-commits --conventional-graduate --create-release github",
-    "publish:Beta": "npm run build:prod && npm run version:newBeta && lerna publish from-package --dist-tag beta",
-    "publish:prerelease": "npm run build:prod && npm run version:prerelease && lerna publish from-package --dist-tag beta",
-    "publish:conventionalBeta": "npm run build:prod && npm run version:conventional && lerna publish from-package --dist-tag beta",
-    "publish:conventional": "npm run build:prod && npm run version:conventional && lerna publish from-package",
-    "publish:stable": "npm run build:prod && npm run version:stable && lerna publish from-package",
+    "publish:Beta": "npm run build && npm run version:newBeta && lerna publish from-package --dist-tag beta",
+    "publish:prerelease": "npm run build && npm run version:prerelease && lerna publish from-package --dist-tag beta",
+    "publish:conventionalBeta": "npm run build && npm run version:conventional && lerna publish from-package --dist-tag beta",
+    "publish:conventional": "npm run build && npm run version:conventional && lerna publish from-package",
+    "publish:stable": "npm run build && npm run version:stable && lerna publish from-package",
     "postpublish": "npm run clean"
   },
   "devDependencies": {
