docs: :pencil: package.json, mocharc and nycrc were adjusted

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prettier:fix": "prettier --write \"packages/**/*.ts\"",
     "build": "tsc -b -v packages",
     "clean": "npx gulp clean:ts",
-    "test": "nyc mocha -r ts-node/register packages/**/*.spec.ts --timeout 1000 --exit",
+    "test": "nyc mocha",
     "testInject": "nyc mocha -r ts-node/register packages/core/__test__/injector/**.spec.ts --timeout 1000 --exit",
     "testFactory": "nyc mocha -r ts-node/register packages/core/__test__/**.spec.ts --timeout 1000 --exit",
     "testCore": "nyc mocha -r ts-node/register packages/core/**/*.spec.ts --timeout 1000 --exit",
@@ -33,6 +33,7 @@
     "chai": "^4.3.10",
     "del": "^7.1.0",
     "eslint": "^9.20.0",
+    "glob": "^11.0.2",
     "gulp": "^4.0.2",
     "lerna": "^7.4.1",
     "mocha": "^10.2.0",
