docs(common,core): :pencil: Changes to eslint and prettier configurations. Fixed file quotation marks.

--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "chai": "^4.3.10",
     "del": "^7.1.0",
     "eslint": "^9.20.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "glob": "^11.0.2",
-    "gulp": "^4.0.2",
-    "lerna": "^7.4.1",
+    "gulp": "^5.0.0",
+    "lerna": "^8.2.2",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^3.5.3",
