--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "printWidth": 80,
   "tabWidth": 2,
   "endOfLine": "auto"
-
 }
