--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.test.inclusions=packages/common/__test__/**,packages/core/__test__/**
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.organization=devdroide-code
-sonar.projectKey=Zanobijs-project
-sonar.projectName=Zanobijs-project
+sonar.projectKey=Zanobijs
+sonar.projectName=Zanobijs
