docs: :pencil: sonar project was adjusted

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,6 @@ sonar.exclusions=node_modules/**,packages/common/__test__/**,packages/core/__tes
 sonar.test.inclusions=packages/common/__test__/**,packages/core/__test__/**
 sonar.language=ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.organization=devdroide-code
-sonar.projectKey=ZanobiJS
+sonar.organization=zanobijs
+sonar.projectKey=devdroide_ZanobiJS
 sonar.projectName=ZanobiJS
