--- a/.github/workflows/PUBLISH.yml
+++ b/.github/workflows/PUBLISH.yml
@@ -3,10 +3,42 @@ name: Publish Package
 on:
   push:
     branches:
+      - develop
       - beta
       - main
 
 jobs:
+  simulate-version-dev:
+    name: Simulate Versioning on Dev
+    if: github.ref == 'refs/heads/develop'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Configure Git Identity
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "github-actions@users.noreply.github.com"
+
+      - name: Simulate Lerna Version (Dev)
+        run: |
+          echo "Simulando versión sin aplicar cambios..."
+          npx lerna version --conventional-commits --conventional-prerelease --preid beta --yes --no-push --loglevel verbose
+          VERSION=$(node -p "require('./lerna.json').version")
+          echo "Versión simulada (sin aplicar): $VERSION"
+
   publish-beta:
     name: Publish Beta Version to NPM
     if: github.ref == 'refs/heads/beta'
