--- a/.github/workflows/PUBLISH.yml
+++ b/.github/workflows/PUBLISH.yml
@@ -34,17 +34,15 @@ jobs:
 
       - name: Simulate Lerna Version (Beta) from Develop
         run: |
-          echo "Simulando versión sin aplicar cambios... BETA"
           npx lerna version --conventional-commits --conventional-prerelease --preid beta --yes --no-push --loglevel verbose
           VERSION=$(node -p "require('./lerna.json').version")
-          echo "Versión simulada BETA (sin aplicar): $VERSION"
+          echo "👷 BETA Simulated Version (not applied): $VERSION"
 
-      - name: Simulate Lerna Version (Beta) from Develop
+      - name: Simulate Lerna Version (Main) from Develop
         run: |
-          echo "Simulando versión sin aplicar cambios... MAIN"
           npx lerna version --conventional-commits --conventional-graduate --yes --no-push --loglevel verbose
           VERSION=$(node -p "require('./lerna.json').version")
-          echo "Versión simulada MAIN (sin aplicar): $VERSION"
+          echo "👷 MAIN Simulated Version (not applied): $VERSION"
 
   publish-beta:
     name: Publish Beta Version to NPM
@@ -86,10 +84,36 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PUSH_BRANCHES_BLOCKED }}
 
+      - name: Check if Lerna would version
+        id: lerna_check
+        run: |
+          CHANGES=$(npx lerna changed)
+          if [ -z "$CHANGES" ]; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+            echo "👷 No changes to version"
+          else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+            echo "🎉 There was a change of version"
+          fi
+
+      - name: Build packages
+        if: steps.lerna_check.outputs.has_changes == 'true'
+        run: |
+          npm run build
+          echo "📦 Build completed! "
+
       - name: Publish to NPM
-        run: npx lerna publish from-git --yes
+        if: steps.lerna_check.outputs.has_changes == 'true'
+        run: |
+          npx lerna publish from-git --yes
+          VERSION=$(node -p "require('./lerna.json').version")
+          echo "🚀 Version v$VERSION Published to NPM!"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_ZANOBIJS_31122025 }}
+
+      - name: Without Publish to NPM
+        if: steps.lerna_check.outputs.has_changes == 'false'
+        run: echo "👷 There are no changes to publish on NPM."
 
   publish-release:
     name: Publish Release Version to NPM and GitHub
@@ -138,7 +162,33 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PUSH_BRANCHES_BLOCKED }}
 
+      - name: Check if Lerna would version
+        id: lerna_check
+        run: |
+          CHANGES=$(npx lerna changed)
+          if [ -z "$CHANGES" ]; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+            echo "👷 No changes to version"
+          else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+            echo "🎉 There was a change of version"
+          fi
+
+      - name: Build packages
+        if: steps.lerna_check.outputs.has_changes == 'true'
+        run: |
+          npm run build
+          echo "📦 Build completed! "
+
       - name: Publish to NPM
-        run: npx lerna publish from-git --yes
+        if: steps.lerna_check.outputs.has_changes == 'true'
+        run: |
+          npx lerna publish from-git --yes
+          VERSION=$(node -p "require('./lerna.json').version")
+          echo "🚀 Version v$VERSION Published to NPM!"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_ZANOBIJS_31122025 }}
+
+      - name: Without Publish to NPM
+        if: steps.lerna_check.outputs.has_changes == 'false'
+        run: echo "👷 There are no changes to publish on NPM."
