--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -9,9 +9,8 @@ jobs:
   validate-branch:
     name: Validate Branch and Commits
     runs-on: ubuntu-latest
-    if: github.base_ref == 'develop'
     steps:
-      - name: Check branch name pattern
+      - name: Check branch name pattern in develop
         run: |
           BRANCH_NAME="${{ github.head_ref }}"
           if [[ "$BRANCH_NAME" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample)\/.+ ]]; then
@@ -35,7 +34,7 @@ jobs:
   validate:
     name: Validate Code Quality
     runs-on: ubuntu-latest
-    needs: [validate-branch ]
+    needs: [validate-branch]
     steps:
       - name: Chevk name branch
         uses: actions/checkout@v3
@@ -79,14 +78,24 @@ jobs:
             echo "Error: Test coverage is below $MIN_COVERAGE%. Current coverage: $COVERAGE%"
             exit 1
           fi
+      - name: Check if changes are inside packages/*
+        id: check_changes
+        run: |
+          echo "Checking for changes inside packages/"
+          git fetch origin ${{ github.base_ref }} --depth=1
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }} HEAD)
+          echo "$CHANGED_FILES"
+          echo "$CHANGED_FILES" | grep -q '^packages/' && echo "changed=true" >> $GITHUB_OUTPUT || echo "changed=false" >> $GITHUB_OUTPUT
 
       - name: SonarQube Scan
+        if: steps.check_changes.outputs.changed == 'true'
         uses: SonarSource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - name: SonarQube Quality Gate check
+        if: steps.check_changes.outputs.changed == 'true'
         uses: SonarSource/sonarqube-quality-gate-action@master
         timeout-minutes: 5
         env:
