--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Check branch name pattern in develop
         run: |
           BRANCH_NAME="${{ github.head_ref }}"
-          if [[ "$BRANCH_NAME" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample)\/.+ ]]; then
+          if [[ "$BRANCH_NAME" =~ ^(chore|ci|docs|feat|fix|style|refactor|test|sample|develop|beta)\/.+ ]]; then
             echo "Branch name $BRANCH_NAME follows the required naming convention"
           else
             echo "Error: Branch name $BRANCH_NAME does not follow the required naming convention"
