ci: Flow optimization and push direct

--- a/.github/workflows/PUBLISH.yml
+++ b/.github/workflows/PUBLISH.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Lerna Version
         run: |
-          npx lerna version ${{ steps.set_vars.outputs.VERSION_ARGS }} --yes --no-push
+          npx lerna version ${{ steps.set_vars.outputs.VERSION_ARGS }} --yes
           VERSION=$(node -p "require('./lerna.json').version")
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Nueva versión (${{ steps.set_vars.outputs.BRANCH }}): $VERSION"
@@ -74,27 +74,13 @@ jobs:
             echo "🎉 There was a change of version"
           fi
 
-      - name: Push Tags and Changes
+      - name: Publish to NPM
         if: steps.lerna_check.outputs.has_changes == 'true'
         run: |
           git add .
           git commit -m "chore: commit the build files for publication and version"
-          git push origin ${{ steps.set_vars.outputs.BRANCH }} --follow-tags
-        env:
-          GH_TOKEN: ${{ secrets.PUSH_BRANCHES_BLOCKED }}
-
-      - name: Create GitHub Release
-        if: steps.lerna_check.outputs.has_changes == 'true' && steps.set_vars.outputs.CREATE_GITHUB_RELEASE == 'true'
-        run: |
-          gh release create v$VERSION --generate-notes
-        env:
-          GH_TOKEN: ${{ secrets.PUSH_BRANCHES_BLOCKED }}
-
-      - name: Publish to NPM
-        if: steps.lerna_check.outputs.has_changes == 'true'
-        run: |
           if [[ ${{ steps.set_vars.outputs.BRANCH }} == 'beta' ]]; then
-            npx lerna publish from-package --yes --dist-tag beta
+            npx lerna publish from-package --yes --pre-dist-tag beta
           else
             npx lerna publish from-package --yes --create-release github
           fi
