--- a/.github/workflows/PUBLISH.yml
+++ b/.github/workflows/PUBLISH.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PUSH_BRANCHES_BLOCKED }}
+          token: ${{ secrets.DEPLOY_KEY }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -77,6 +77,18 @@ jobs:
           git add .
           git commit -m "chore: generated new version $VERSION"
           git push origin ${{ steps.set_vars.outputs.BRANCH }} --follow-tags
+
+      - name: Create Pull Request for version bump
+        if: steps.lerna_check.outputs.has_changes == 'true'
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "chore: version bump [skip ci]"
+          title: "Version Bump to ${{ env.VERSION }}"
+          body: "Automated version bump by GitHub Actions"
+          branch: "version-bump-${{ env.VERSION }}"
+          base: "${{ steps.set_vars.outputs.BRANCH }}"
+          delete-branch: true
 
       - name: Build packages
         if: steps.lerna_check.outputs.has_changes == 'true'
