--- a/lerna.json
+++ b/lerna.json
@@ -15,7 +15,10 @@
         "**/*.test.js",
         "**/*.spec.js",
         "**/__tests__/**",
-        "**/__mocks__/**"
+        "**/__mocks__/**",
+        ".github/**",
+        ".lang/**",
+        "gulp/**"
       ]
     },
     "publish": {
